# cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: CMakeLists.txt
app/src/: main.cpp
hello/: CMakeLists.txt
hello/include/hello/: say_hello.hpp
mylib/: CMakeLists.txt
mylib/include/mylib/: mylib.hpp
mylib/src/: mylib.cpp
mylib/test/: testmylib.cpp
src/: CMakeLists.txt  say_hello.cpp
src/app/: CMakeLists.txt  app
src/mylib/: CMakeLists.txt  mylibtest
test/: testmylib.cpp
